# RUST

./: README.md
EMI_calculator/: Cargo.toml
EMI_calculator/src/: main.rs
Military_time/: Cargo.toml
Military_time/src/: main  main.rs
car_collection/: Cargo.toml
car_collection/src/: main.rs
display_fmt/: Cargo.toml
display_fmt/src/: main.rs
event_handler/src/: main.rs
fruits_bubble_sort/: Cargo.toml
fruits_bubble_sort/src/: main.rs
hello_world_001/: Cargo.toml
hotel_booking_refactored/: Cargo.toml
hotel_booking_refactored/src/: main.rs
hotel_bookings/: Cargo.toml
inventory_management_system/: Cargo.toml
inventory_management_system/src/: main.rs
mini_library_manager/: Cargo.toml
mini_library_manager/src/: main.rs
ny_times_api/: Cargo.toml
ny_times_api/src/: main.rs
palindrome/src/: main.rs
password_project/src/: main.rs
print_002/: Cargo.toml
print_002/src/: main  main.rs
result_enum_error_handling/: Cargo.toml
result_enum_error_handling/src/: main.rs
retain_retain_mut/: Cargo.toml
retain_retain_mut/src/: main.rs
rgba888_to_rgb565/: Cargo.toml
rgba888_to_rgb565/src/: main.rs
simple_generic_stack/: Cargo.toml
simple_generic_stack/src/: main.rs
task_priority/: Cargo.toml
task_priority/src/: main.rs
tax_calculator/: Cargo.toml
tax_calculator/src/: main.rs
transaction_tracker/: Cargo.toml
tuple_pattern_matching/: Cargo.toml
tuple_pattern_matching/src/: main.rs
weather_station/: Cargo.toml
weather_station/src/: main.rs
word_counter/src/: main.rs
writing_tests/src/: main.rs
